product add to database fixes

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
   "port": 8080,
-  "mongodb_url": "mongodb+srv://products_test_db:MBPrPMfurexvd65R@cluster0.nzwrey3.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+  "mongodb_url": "mongodb+srv://products_test_db:MBPrPMfurexvd65R@cluster0.nzwrey3.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
+  "image_api_key": "d44e1a31a60e7cc7774196785602cce0"
 }
