--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "compression": "^1.7.4",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "express-fileupload": "^1.4.3",
     "express-session": "^1.18.0",
+    "imgbb-uploader": "^1.5.1",
     "mongoose": "^8.2.1"
   }
 }
